# rust-vb-project-template

./: Cargo.toml  assets.toml  cargo-generate.toml  justfile.liquid
src/: main.rs.liquid
